--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -1,48 +1,49 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>There is / There are - David and Goliath</title>
+    <title>Definite and Indefinite Articles - The Creation Story</title>
     <style>
-        body {
+        body {{
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
-        }
-        .container {
+        }}
+        .container {{
             max-width: 100%;
             margin: auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
+        }}
+        h1 {{
             text-align: center;
             color: #333;
             font-size: 1.5rem;
-        }
-        h2 {
+        }}
+        h2 {{
             background-color: #28a745;
             color: white;
             padding: 10px;
             border-radius: 4px;
             font-size: 1.25rem;
-        }
-        .section {
+        }}
+        .section {{
             background-color: #d4edda;
             margin-bottom: 20px;
             padding: 15px;
             border-radius: 5px;
-        }
-        .section p {
+        }}
+        .section p {{
             margin: 0;
             padding: 5px 0;
-        }
-        .section input[type="text"] {
+        }}
+        .section input[type="text"] {{
             width: 100%;
             padding: 10px;
             margin-top: 10px;
@@ -51,12 +52,12 @@
             box-sizing: border-box;
             background-color: #f4f4f4;
             cursor: not-allowed;
-        }
-        .section input[readonly] {
+        }}
+        .section input[readonly] {{
             background-color: #f4f4f4;
             color: #000;
-        }
-        .btn-download {
+        }}
+        .btn-download {{
             display: block;
             width: 100%;
             padding: 10px;
@@ -67,54 +68,54 @@
             border-radius: 5px;
             margin-top: 20px;
             cursor: pointer;
-        }
-        .btn-download:hover {
+        }}
+        .btn-download:hover {{
             background-color: #1e7e34;
-        }
-        .image-container {
+        }}
+        .image-container {{
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
-        }
+        }}
 
-        .image-container img {
+        .image-container img {{
             max-width: 100%;
             height: auto;
             border-radius: 8px;
-        }
+        }}
 
-        @media (max-width: 768px) {
-            .container {
+        @media (max-width: 768px) {{
+            .container {{
                 padding: 15px;
-            }
+            }}
 
-            h1 {
+            h1 {{
                 font-size: 1.25rem;
-            }
+            }}
 
-            h2 {
+            h2 {{
                 font-size: 1.1rem;
-            }
-        }
+            }}
+        }}
 
-        @media (max-width: 480px) {
-            .container {
+        @media (max-width: 480px) {{
+            .container {{
                 padding: 10px;
-            }
+            }}
 
-            h1 {
+            h1 {{
                 font-size: 1rem;
-            }
+            }}
 
-            h2 {
+            h2 {{
                 font-size: 1rem;
-            }
+            }}
 
-            .btn-download {
+            .btn-download {{
                 font-size: 0.9rem;
                 padding: 8px;
-            }
-        }
+            }}
+        }}
     </style>
 </head>
 <body>
@@ -123,79 +124,71 @@
 </button>
 
 <div class="container">
-    <h1>There is / There are - David and Goliath</h1>
+    <h1>Definite and Indefinite Articles - The Creation Story</h1>
     
     <div class="image-container">
-        <img src="foto4.png" alt="David and Goliath">
+        <img src="an_vs_a_creation_example.jpeg" alt="Example of 'a' and 'an' using Creation Story">
     </div>
 
     <div class="section">
-        <h2>A</h2>
-        <p>Look at these sentences from the story of David and Goliath:</p>
+        <h2>Indefinite Articles: "a" and "an"</h2>
+        <p>Use "a" and "an" when talking about something for the first time or something that is not specific.</p>
+        <p><strong>"A"</strong> is used before words that start with a consonant sound.</p>
+        <p><strong>"An"</strong> is used before words that start with a vowel sound.</p>
+        <p><strong>Examples:</strong></p>
         <ul>
-            <li>There is a giant in the valley.</li>
-            <li>There are five stones in David's hand.</li>
-            <li>There is an Israelite army ready for battle.</li>
-            <li>There are many Philistine soldiers.</li>
+            <li>"God made <strong>a</strong> sky above the earth." (The sky is mentioned for the first time.)</li>
+            <li>"There is <strong>an</strong> apple tree in the Garden." (The apple tree is mentioned for the first time.)</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>B</h2>
-        <p>There is and There are are used to say that something exists or is present.</p>
-        <p><strong>There is</strong> = singular (one thing)</p>
+        <h2>Definite Article: "the"</h2>
+        <p>Use "the" when talking about something specific, something that has already been mentioned, or something unique.</p>
+        <p><strong>Examples:</strong></p>
         <ul>
-            <li>There is a sling in David's hand.</li>
-            <li>There is a young shepherd named David.</li>
-        </ul>
-        <p><strong>There are</strong> = plural (more than one thing)</p>
-        <ul>
-            <li>There are five stones.</li>
-            <li>There are many soldiers in the army.</li>
+            <li>"God separated <strong>the</strong> light from <strong>the</strong> darkness." (Specific light and darkness are mentioned.)</li>
+            <li>"<strong>The</strong> earth was empty and dark." (There is only one Earth, so it is specific.)</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>C</h2>
-        <p>Now complete these sentences from the story:</p>
-        <p>1. __________ a giant named Goliath. (There is)</p>
-        <p>2. __________ five smooth stones. (There are)</p>
-        <p>3. __________ a sling in David's hand. (There is)</p>
-        <p>4. __________ many soldiers in the Israelite army. (There are)</p>
-        <p>5. __________ a great battle in the valley. (There is)</p>
-    </div>
-
-    <div class="section">
-        <h2>D</h2>
-        <p>Write the correct form of <strong>there is</strong> or <strong>there are</strong>:</p>
-        <p>1. __________ a shepherd with courage.</p>
-        <p>2. __________ two armies ready for battle.</p>
-        <p>3. __________ a large valley between the armies.</p>
-        <p>4. __________ many stones in the stream.</p>
-        <p>5. __________ a great victory for Israel.</p>
-    </div>
-
-    <div class="section">
-        <h2>E</h2>
-        <p>Questions and Answers:</p>
-        <p>1. What is there in David's hand?</p>
-        <p>- There is a sling and there are five stones.</p>
-        <p>2. Who is there in the valley?</p>
-        <p>- There is a giant named Goliath.</p>
-        <p>3. How many soldiers are there in the Philistine army?</p>
-        <p>- There are many soldiers.</p>
-    </div>
-
-    <div class="section">
-        <h2>F</h2>
-        <p>Now you. Write about what <strong>there is</strong> or <strong>there are</strong> in your favorite story:</p>
-        <input type="text" placeholder="1. ________________________________________________________" readonly>
-        <input type="text" placeholder="2. ________________________________________________________" readonly>
-        <input type="text" placeholder="3. ________________________________________________________" readonly>
+        <h2>Exercises</h2>
+        <p>Fill in the blanks with "a," "an," or "the":</p>
+        <p>1. In the beginning, God created ___ heavens and ___ earth.</p>
+        <p>2. There was ___ darkness over ___ surface of ___ deep.</p>
+        <p>3. God said, "Let there be ___ light." And there was ___ light.</p>
+        <p>4. He created ___ moon to rule ___ night and ___ sun to rule ___ day.</p>
+        <p>5. God saw all ___ things He had made, and they were very good.</p>
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
 </div>
 
+<script>
+function generatePDF() {{
+    var doc = new jsPDF();
+    doc.text(20, 20, 'Definite and Indefinite Articles - The Creation Story');
+    doc.addImage('an_vs_a_creation_example.jpeg', 'JPEG', 15, 40, 180, 160);
+    doc.text(20, 210, 'Indefinite Articles: "a" and "an"');
+    doc.text(20, 220, 'Use "a" and "an" when talking about something for the first time or something that is not specific.');
+    doc.text(20, 230, '"A" is used before words that start with a consonant sound.');
+    doc.text(20, 240, '"An" is used before words that start with a vowel sound.');
+    doc.text(20, 260, 'Examples:');
+    doc.text(20, 270, 'God made a sky above the earth. (The sky is mentioned for the first time.)');
+    doc.text(20, 280, 'There is an apple tree in the Garden. (The apple tree is mentioned for the first time.)');
+    doc.text(20, 300, 'Definite Article: "the"');
+    doc.text(20, 310, 'Use "the" when talking about something specific, something that has already been mentioned, or something unique.');
+    doc.text(20, 320, 'God separated the light from the darkness. (Specific light and darkness are mentioned.)');
+    doc.text(20, 330, 'The earth was empty and dark. (There is only one Earth, so it is specific.)');
+    doc.text(20, 350, 'Exercises: Fill in the blanks with "a," "an," or "the":');
+    doc.text(20, 360, '1. In the beginning, God created ___ heavens and ___ earth.');
+    doc.text(20, 370, '2. There was ___ darkness over ___ surface of ___ deep.');
+    doc.text(20, 380, '3. God said, "Let there be ___ light." And there was ___ light.');
+    doc.text(20, 390, '4. He created ___ moon to rule ___ night and ___ sun to rule ___ day.');
+    doc.text(20, 400, '5. God saw all ___ things He had made, and they were very good.');
+    doc.save('grammar_lesson_creation.pdf');
+}}
+</script>
 </body>
 </html>
