--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -13,7 +13,7 @@
             line-height: 1.6;
         }
         .container {
-            max-width: 100%;
+            max-width: 800px;
             margin: auto;
             background: white;
             padding: 20px;
@@ -114,19 +114,31 @@
     </div>
 
     <div class="section">
-        <h2>Indefinite Articles: "a" and "an"</h2>
-        <p>Use "a" and "an" when talking about something for the first time or something that is not specific.</p>
-        <p><strong>"A"</strong> is used before words that start with a consonant sound.</p>
-        <p><strong>"An"</strong> is used before words that start with a vowel sound.</p>
+        <h2>Grammar: Definite and Indefinite Articles</h2>
+        <p><strong>1. Indefinite Articles: "a" and "an"</strong></p>
+        <p><strong>Usage:</strong></p>
         <ul>
-            <li>"God made <strong>a</strong> sky above the earth." (The sky is mentioned for the first time.)</li>
+            <li>Use "a" and "an" when talking about something for the first time or something that is not specific.</li>
+            <li>"A" is used before words that start with a consonant sound.</li>
+            <li>"An" is used before words that start with a vowel sound.</li>
+        </ul>
+        <p><strong>Examples from the Creation Story:</strong></p>
+        <ul>
+            <li>"God made <strong>a</strong> sky above the earth." (The sky is mentioned for the first time, and it is not specific.)</li>
+            <li>"He created <strong>a</strong> lion." (Any lion, not a specific one.)</li>
             <li>"There is <strong>an</strong> apple tree in the Garden." (The apple tree is mentioned for the first time.)</li>
+            <li>"God created <strong>an</strong> elephant." (Any elephant, not a specific one.)</li>
         </ul>
     </div>
 
     <div class="section">
-        <h2>Definite Article: "the"</h2>
-        <p>Use "the" when talking about something specific, something that has already been mentioned, or something unique.</p>
+        <h2>2. Definite Article: "the"</h2>
+        <p><strong>Usage:</strong></p>
+        <ul>
+            <li>Use "the" when talking about something specific, something that has already been mentioned, or something unique.</li>
+            <li>"The" can be used before any noun, singular or plural, with a vowel or consonant sound.</li>
+        </ul>
+        <p><strong>Examples from the Creation Story:</strong></p>
         <ul>
             <li>"God separated <strong>the</strong> light from <strong>the</strong> darkness." (Specific light and darkness are mentioned.)</li>
             <li>"<strong>The</strong> earth was empty and dark." (There is only one Earth, so it is specific.)</li>
@@ -135,12 +147,35 @@
 
     <div class="section">
         <h2>Exercises</h2>
-        <p>Fill in the blanks with "a," "an," or "the":</p>
-        <p>1. In the beginning, God created ___ heavens and ___ earth.</p>
-        <p>2. There was ___ darkness over ___ surface of ___ deep.</p>
-        <p>3. God said, "Let there be ___ light." And there was ___ light.</p>
-        <p>4. He created ___ moon to rule ___ night and ___ sun to rule ___ day.</p>
-        <p>5. God saw all ___ things He had made, and they were very good.</p>
+        <p><strong>Exercise 1: Fill in the blanks with "a," "an," or "the"</strong></p>
+        <ul>
+            <li>In the beginning, God created ___ heavens and ___ earth.</li>
+            <li>There was ___ darkness over ___ surface of ___ deep.</li>
+            <li>God said, "Let there be ___ light." And there was ___ light.</li>
+            <li>He created ___ moon to rule ___ night and ___ sun to rule ___ day.</li>
+            <li>God saw all ___ things He had made, and they were very good.</li>
+        </ul>
+
+        <p><strong>Exercise 2: Choose the correct article</strong></p>
+        <ul>
+            <li>God created ___ tree in the Garden. (a/an/the)</li>
+            <li>___ sky above was clear and blue. (a/an/the)</li>
+            <li>There is ___ animal on the land. (a/an/the)</li>
+            <li>___ stars were placed in the sky. (a/an/the)</li>
+            <li>Let there be ___ water gathered in one place. (a/an/the)</li>
+        </ul>
+
+        <p><strong>Exercise 3: Complete the sentences</strong></p>
+        <ul>
+            <li>God created ___ (animal) to live on the land. ___ (animal) is very strong.</li>
+            <li>There is ___ (fruit) tree in the Garden.</li>
+            <li>___ (light) was called "day," and ___ (darkness) was called "night."</li>
+            <li>He made ___ (sun) to shine by day and ___ (moon) to glow by night.</li>
+            <li>Finally, God created ___ (man) and ___ (woman).</li>
+        </ul>
+
+        <p><strong>Additional Practice:</strong></p>
+        <p>Encourage students to create their own sentences using "a," "an," and "the" to describe things they see in the classroom or around them. This will help reinforce the rules and improve their understanding of how to use articles in context.</p>
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
@@ -151,23 +186,35 @@ function generatePDF() {
     var doc = new jsPDF();
     doc.text(20, 20, 'Definite and Indefinite Articles - The Creation Story');
     doc.addImage('an_vs_a_creation_example.jpeg', 'JPEG', 15, 40, 180, 160);
-    doc.text(20, 210, 'Indefinite Articles: "a" and "an"');
-    doc.text(20, 220, 'Use "a" and "an" when talking about something for the first time or something that is not specific.');
-    doc.text(20, 230, '"A" is used before words that start with a consonant sound.');
-    doc.text(20, 240, '"An" is used before words that start with a vowel sound.');
-    doc.text(20, 260, 'Examples:');
-    doc.text(20, 270, 'God made a sky above the earth. (The sky is mentioned for the first time.)');
-    doc.text(20, 280, 'There is an apple tree in the Garden. (The apple tree is mentioned for the first time.)');
-    doc.text(20, 300, 'Definite Article: "the"');
-    doc.text(20, 310, 'Use "the" when talking about something specific, something that has already been mentioned, or something unique.');
-    doc.text(20, 320, 'God separated the light from the darkness. (Specific light and darkness are mentioned.)');
-    doc.text(20, 330, 'The earth was empty and dark. (There is only one Earth, so it is specific.)');
-    doc.text(20, 350, 'Exercises: Fill in the blanks with "a," "an," or "the":');
-    doc.text(20, 360, '1. In the beginning, God created ___ heavens and ___ earth.');
-    doc.text(20, 370, '2. There was ___ darkness over ___ surface of ___ deep.');
-    doc.text(20, 380, '3. God said, "Let there be ___ light." And there was ___ light.');
-    doc.text(20, 390, '4. He created ___ moon to rule ___ night and ___ sun to rule ___ day.');
-    doc.text(20, 400, '5. God saw all ___ things He had made, and they were very good.');
+    doc.text(20, 210, 'Grammar: Definite and Indefinite Articles');
+    doc.text(20, 230, '1. Indefinite Articles: "a" and "an"');
+    doc.text(20, 240, 'Usage:');
+    doc.text(20, 250, 'Use "a" and "an" when talking about something for the first time or something that is not specific.');
+    doc.text(20, 260, '"A" is used before words that start with a consonant sound.');
+    doc.text(20, 270, '"An" is used before words that start with a vowel sound.');
+    doc.text(20, 290, 'Examples:');
+    doc.text(20, 300, 'God made a sky above the earth. (The sky is mentioned for the first time.)');
+    doc.text(20, 310, 'He created a lion. (Any lion, not a specific one.)');
+    doc.text(20, 320, 'There is an apple tree in the Garden. (The apple tree is mentioned for the first time.)');
+    doc.text(20, 330, 'God created an elephant. (Any elephant, not a specific one.)');
+    doc.text(20, 350, '2. Definite Article: "the"');
+    doc.text(20, 360, 'Usage:');
+    doc.text(20, 370, 'Use "the" when talking about something specific, something that has already been mentioned, or something unique.');
+    doc.text(20, 380, 'Examples:');
+    doc.text(20, 390, 'God separated the light from the darkness. (Specific light and darkness are mentioned.)');
+    doc.text(20, 400, 'The earth was empty and dark. (There is only one Earth, so it is specific.)');
+    doc.text(20, 420, 'Exercises:');
+    doc.text(20, 430, '1. In the beginning, God created ___ heavens and ___ earth.');
+    doc.text(20, 440, '2. There was ___ darkness over ___ surface of ___ deep.');
+    doc.text(20, 450, '3. God said, "Let there be ___ light." And there was ___ light.');
+    doc.text(20, 460, '4. He created ___ moon to rule ___ night and ___ sun to rule ___ day.');
+    doc.text(20, 470, '5. God saw all ___ things He had made, and they were very good.');
+    doc.text(20, 490, '2. Choose the correct article:');
+    doc.text(20, 500, '1. God created ___ tree in the Garden. (a/an/the)');
+    doc.text(20, 510, '2. ___ sky above was clear and blue. (a/an/the)');
+    doc.text(20, 520, '3. There is ___ animal on the land. (a/an/the)');
+    doc.text(20, 530, '4. ___ stars were placed in the sky. (a/an/the)');
+    doc.text(20, 540, '5. Let there be ___ water gathered in one place. (a/an/the)');
     doc.save('grammar_lesson_creation.pdf');
 }
 </script>
