--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -5,7 +5,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indefinite Articles - The Creation Story</title>
     <style>
-        /* [Same style as before] */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+            font-size: 2rem;
+            margin-top: 70px; /* Ajuste para evitar sobreposição */
+        }
+        h2 {
+            background-color: #28a745;
+            color: white;
+            padding: 10px;
+            border-radius: 4px;
+            font-size: 1.5rem;
+            text-align: center;
+        }
+        .section {
+            background-color: #d4edda;
+            margin-bottom: 20px;
+            padding: 20px;
+            border-radius: 5px;
+        }
+        .section p {
+            margin: 0;
+            padding: 10px 0;
+            font-size: 1.2rem;
+        }
+        .section ul {
+            padding-left: 20px;
+        }
+        .section ul li {
+            margin: 5px 0;
+        }
+        .btn-download {
+            display: block;
+            width: 100%;
+            padding: 15px;
+            background-color: #218838;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+            cursor: pointer;
+            font-size: 1.2rem;
+        }
+        .btn-download:hover {
+            background-color: #1e7e34;
+        }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+            .back-button {
+                top: 10px;
+                left: 10px;
+            }
+            h1 {
+                font-size: 1.5rem;
+                margin-top: 90px; /* Ajuste para evitar sobreposição */
+            }
+            h2 {
+                font-size: 1.25rem;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                padding: 10px;
+            }
+            .back-button {
+                top: 5px;
+                left: 5px;
+            }
+            h1 {
+                font-size: 1.25rem;
+                margin-top: 100px; /* Ajuste para evitar sobreposição */
+            }
+            h2 {
+                font-size: 1.1rem;
+            }
+            .btn-download {
+                font-size: 1rem;
+                padding: 12px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -49,6 +172,8 @@
                         htmlContent += `<p><strong>${line}</strong></p><ul>`;
                     } else if (line.startsWith('"')) {
                         htmlContent += `<li>${line}</li>`;
+                    } else if (line.startsWith('Examples')) {
+                        htmlContent += `</ul>`;
                     } else {
                         htmlContent += `<p>${line}</p>`;
                     }
